:recycle: refactor api get profile struct and the respons
